[package]
name = "rustic-soundcloud-provider"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"

[dependencies.rustic-core]
git = "https://github.com/rustic-music-player/core"

[dependencies.soundcloud]
git = "https://github.com/maxjoehnk/soundcloud-rs"
